# plotly-dashboard-01

./: example_1_main.py  main.py  pyproject.toml  requirements.txt
