[project]
name = "hello-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "dash>=4.0.0",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "gunicorn>=25.1.0",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
]
